# rolodex

./: Cargo.toml  LICENSE.md  README.md
data/: sample_3_0.vcf
examples/: simple.rs
src/: lib.rs  parse.rs  vcard.rs  vcf.rs
src/property/: mod.rs  parameter.rs  parameters.rs  parse.rs
src/types/: address.rs  email.rs  gender.rs  geo.rs  image.rs  kind.rs  mod.rs  name.rs  url.rs
src/value/: at_least.rs  mod.rs  ty.rs
tests/: parameters.rs  vcard.rs
tests/examples/: kitchen_sink.rs  mod.rs  vcard2_1.rs  vcard3_0.rs  vcard4_0.rs
tests/types/: formatted_name.rs  image.rs  mod.rs  url.rs
