[package]
name = "rolodex"
version = "0.1.0"
authors = ["perjoratic <perjoratic@protonmail.com>"]
edition = "2018"
description = "A Forgiving VCard implementation."
homepage = "https://github.com/Bytebuddha/rolodex"
documentation = "https://docs.rs/rolodex"
license-file = "LICENSE.md"
categories = ["parser-implementations"]
keywords = ["vcard", "contacts"]

[features]
serialize = ["serde", "chrono/serde"]
default = ["serialize", "typed-builder"]

[dependencies]
chrono = "0.4.19"
nom = "6.1.2"
typed-builder = { version = "0.9.0", optional = true }

[dependencies.serde]
optional = true
version = "^1"
features = ["derive"]

[dev-dependencies]
serde_json = "1.0.64"
